--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.18.2",
-    "body-parser": "^1.20.2",
+    "@grpc/grpc-js": "^1.13.4",
+    "@grpc/proto-loader": "^0.7.15",
     "axios": "^1.6.0",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
