--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   node1:
     build: .
@@ -61,6 +59,8 @@ services:
       - node2
       - node3
       - node4
+    tty: true
+    stdin_open: true
     networks:
       raft-network:
         aliases:
@@ -74,6 +74,8 @@ services:
       - node2
       - node3
       - node4
+    tty: true
+    stdin_open: true
     networks:
       raft-network:
         aliases:
