--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: .
     environment:
       - NODE_ID=node1
-      - CLUSTER_NODES=node1,node2,node3,node4
+      - CLUSTER_NODES=node1,node2,node3,node4,node5
       - PORT=3000
     ports:
       - "3001:3000"
@@ -11,12 +11,13 @@ services:
       raft-network:
         aliases:
           - node1
+      client-network: {} # allow clients to access public API
 
   node2:
     build: .
     environment:
       - NODE_ID=node2
-      - CLUSTER_NODES=node1,node2,node3,node4
+      - CLUSTER_NODES=node1,node2,node3,node4,node5
       - PORT=3000
     ports:
       - "3002:3000"
@@ -24,12 +25,13 @@ services:
       raft-network:
         aliases:
           - node2
+      client-network: {}
 
   node3:
     build: .
     environment:
       - NODE_ID=node3
-      - CLUSTER_NODES=node1,node2,node3,node4
+      - CLUSTER_NODES=node1,node2,node3,node4,node5
       - PORT=3000
     ports:
       - "3003:3000"
@@ -37,12 +39,13 @@ services:
       raft-network:
         aliases:
           - node3
+      client-network: {}
 
   node4:
     build: .
     environment:
       - NODE_ID=node4
-      - CLUSTER_NODES=node1,node2,node3,node4
+      - CLUSTER_NODES=node1,node2,node3,node4,node5
       - PORT=3000
     ports:
       - "3004:3000"
@@ -50,37 +53,56 @@ services:
       raft-network:
         aliases:
           - node4
+      client-network: {}
+
+  node5:
+    build: .
+    environment:
+      - NODE_ID=node5
+      - CLUSTER_NODES=node1,node2,node3,node4,node5
+      - PORT=3000
+    ports:
+      - "3005:3000"
+    networks:
+      raft-network:
+        aliases:
+          - node5
+      client-network: {}
 
   client1:
     build: .
     command: npm run client
+    tty: true
+    stdin_open: true
     depends_on:
       - node1
       - node2
       - node3
       - node4
-    tty: true
-    stdin_open: true
+      - node5
     networks:
-      raft-network:
+      client-network:
         aliases:
           - client1
 
   client2:
     build: .
     command: npm run client
+    tty: true
+    stdin_open: true
     depends_on:
       - node1
       - node2
       - node3
       - node4
-    tty: true
-    stdin_open: true
+      - node5
     networks:
-      raft-network:
+      client-network:
         aliases:
           - client2
 
 networks:
   raft-network:
+    driver: bridge
+  client-network:
     driver: bridge
