--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.6.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
